# junglebook

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  fix-imports.sh  fix.sh  id_ed25519 (private key)  id_ed25519 (private key).pub  jest.config.js  package-lock.json  package.json  pyproject.toml  turbo.json  vitest.config.ts  web-structure.txt
.github/: dependabot.yml
.github/rulesets/: main.yml
.github/workflows/: ci-audit.yml  ci.yml
apps/dashboard-charts/apps/web/: .eslintrc.cjs  eslint.config.js  eslint.config.mjs  layout.tsx  next.config.cjs  next.config.js  next.config.mjs  package-lock.json  package.json  page.tsx  tailwind.config.js  tsconfig.json  wrangler.toml
apps/dashboard-charts/apps/web/.open-next/: worker.js
apps/dashboard-charts/apps/web/.open-next/assets/: BUILD_ID
apps/dashboard-charts/apps/web/.open-next/cloudflare/: cache-assets-manifest.sql  images.js  init.js
apps/dashboard-charts/apps/web/.open-next/cloudflare-templates/: images.d.ts  images.js  init.js
apps/dashboard-charts/apps/web/.open-next/dynamodb-provider/: dynamodb-cache.json
apps/dashboard-charts/apps/web/db/: schema.sql  seed.sql
apps/dashboard-charts/apps/web/src/: middleware.ts
apps/dashboard-charts/audit/: AuditReport.md
ci/: pipelines.yaml
jb/: cli.py  selector.py
jb/generators/: common.py  django_postgres.py  serverless_edge.py  t1_next_worker.py  t2_django_aws.py
jb/presets/: next_login_charts.py
junglebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: create-app.js
templates/next/: next.config.mjs
(+58 files in other folders)
