[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junglebook"
version = "0.1.0"
description = "Ultra-intelligent instant app generator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pyyaml",
]

[project.scripts]
jb = "jb.cli:app"

[tool.setuptools]
# Explicitly tell setuptools what to package
packages = ["jb"]

